--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.15.0",
+    "react-spinners": "^0.13.8",
     "styled-components": "^5.3.11",
+    "sweetalert2": "^11.7.31",
     "yup": "^1.2.0"
   },
   "devDependencies": {
